--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-  compile group: 'ro.szzsa.livescore', name: 'livescore-model', version: livescoreModelVersion
-  testCompile group: 'junit', name: 'junit', version: junitVersion
+  compile 'ro.szzsa.livescore:livescore-model:1.0'
+  testCompile 'junit:junit:4.12'
 }
